<resources>
    <string name="app_name">Watch Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="latest">Latest</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending >></string>
    <string name="categories">Categories</string>


    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="history">History</string>
    <string name="horror">Horror</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="romance">Romance</string>
    <string name="science_fiction">Science Fiction</string>
    <string name="tv_movie">TV Movie</string>
    <string name="thriller">Thriller</string>
    <string name="war">War</string>
    <string name="western">Western</string>
    <string name="searchHintName">Search Movies</string>



    <string name="image_average">image_average</string>
    <string name="image_favorite">image_favorite</string>
    <string name="watch_movies">Watch Movies</string>
    <string name="image_score">image_score</string>
    <string name="image_comment">image_comment</string>
    <string name="image_search">image_search</string>
    <string name="image_category">image_category</string>
    <string name="image_close">image_close</string>


    <string name="register">Register</string>
    <string name="name_and_surname">Name And Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>

    <string name="name_email_password">name, e-mail and password cannot be empty</string>
    <string name="email_password">E-mail and password cannot be empty</string>
    <string name="name">name cannot be empty</string>
    <string name="email_cont">e-mail cannot be empty</string>
    <string name="password_cont">password cannot be empty</string>
    <string name="not_register">you not have register</string>
</resources>