<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/line_layout_dialog"
        android:minWidth="@dimen/minWidthThree"
        android:minHeight="@dimen/minHeightThree">

        <TextView
            android:id="@+id/text_categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_verticalFour"
            android:fontFamily="@font/bitter_bold_italic"
            android:text="@string/categories"
            android:textColor="@color/milk"
            android:textSize="@dimen/text_sizeThree"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_verticalFour"
            android:contentDescription="@string/image_close"
            android:src="@drawable/ic_baseline_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/text_now_playing"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_verticalFour"
            android:backgroundTint="@color/milk"
            android:text="@string/now_playing"
            android:textAllCaps="false"
            android:textColor="@color/eden"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_categories" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popular"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_verticalThree"
            android:backgroundTint="@color/milk"
            android:text="@string/top_rated"
            android:textAllCaps="false"
            android:textColor="@color/eden"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_now_playing" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/top_rated"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_verticalThree"
            android:backgroundTint="@color/milk"
            android:text="@string/upcoming"
            android:textAllCaps="false"
            android:textColor="@color/eden"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upComing"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_verticalThree"
            android:backgroundTint="@color/milk"
            android:text="@string/popular"
            android:textAllCaps="false"
            android:textColor="@color/eden"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_rated" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>